infrastructure/kafka-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: kafka
spec:
  revisionHistoryLimit: 2 
  selector:
    matchLabels:
      app: kafka-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: kafka-ui
        image: provectuslabs/kafka-ui:latest
        ports:
          - name: web
            containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
