infrastructure/kafka-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: kafka
spec:
  selector:
    app: kafka-ui

  ports:
  - name: web
    port: 80
    targetPort: web
